# Router-Lab

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.asc  .gitmodules  CMakeLists.txt  HowToCheck.md  HowToDebug.md  HowToUse.md  HowToUseIp.md  HowToUseMake.md  HowToUseRpi.md  Online.md  README-JOINT.md  README.md  host0.pcap  host1.pcap  scores.xlsx  setup-r1.sh  setup-r3.sh  test.pcap  topology_joint.xml
.github/workflows/: cpp.yml
Datagen/: .gitignore  Cargo.toml
Datagen/src/: lib.rs
Docker/: Dockerfile  build.sh
Example/: CMakeLists.txt  broadcaster.cpp  capture.cpp  shell.cpp
HAL/: CMakeLists.txt
HAL/include/: common.h  router_hal.h  router_hal_common.h
HAL/src/: common.cpp
HAL/src/emcc/: library.js  preamble.js  router_hal.cpp  test.html
HAL/src/linux/: router_hal.cpp
HAL/src/linux/platform/: standard.h  testing.h
HAL/src/macOS/: router_hal.cpp
HAL/src/stdio/: router_hal.cpp
HAL/src/xilinx/: router_hal.c
Homework/boilerplate/: .gitignore  Makefile  forwarding.cpp  main.cpp  protocol.cpp
Homework/checksum/: .gitignore  Makefile  README.md  checksum.cpp  grade.py  main.cpp
Homework/checksum/data/: .gitattributes  checksum_input1.pcap  checksum_input2.pcap  checksum_input3.pcap  checksum_output1.out  checksum_output2.out  checksum_output3.out
Homework/dhcpv6/: dhcpv6.h  main.cpp
Homework/dhcpv6/common/: Makefrag
Homework/dhcpv6/custom/: Makefile
Homework/eui64/: .gitignore  Makefile  README.md  README_en.md  eui64.cpp  eui64.h  grade.py  main.cpp
Homework/eui64/data/: eui64_answer1.txt  eui64_answer2.txt  eui64_answer3.txt  eui64_answer4.txt  eui64_input2.txt  eui64_input3.txt  eui64_input4.txt
Homework/forwarding/: .gitignore  Makefile  README.md  checksum.cpp  forwarding.cpp  grade.py  main.cpp
Homework/forwarding/data/: forwarding_input1.pcap  forwarding_input2.pcap  forwarding_input3.pcap  forwarding_input4.pcap  forwarding_output1.out  forwarding_output2.out  forwarding_output3.out  forwarding_output4.out
Homework/internet-checksum/: .gitignore  Makefile  README.md  README_en.md  checksum.cpp  checksum.h  grade.py  main.cpp
Homework/internet-checksum/data/: checksum_answer1.txt  checksum_answer2.txt  checksum_answer3.txt  checksum_answer4.txt  checksum_input1.pcap  checksum_input2.pcap  checksum_input3.pcap  checksum_input4.pcap  checksum_output1.out  checksum_output2.out
Homework/lookup/: .gitignore  Makefile  README.md  README_en.md  grade.py  lookup.cpp  lookup.h  main.cpp  router.h
Homework/lookup/data/: lookup_answer1.txt  lookup_answer2.txt  lookup_answer3.txt  lookup_answer4.txt  lookup_answer5.txt  lookup_input1.in  lookup_input1.txt  lookup_input2.in  lookup_input2.txt  lookup_input3.in  lookup_input3.txt  lookup_input4.in  lookup_input4.txt  lookup_input5.txt  lookup_output1.out  lookup_output2.out  lookup_output3.out  lookup_output4.out
Homework/ospf/: README.md  main.cpp
Homework/ospf/common/: Makefrag
Homework/ospf/interconnect-r2/: Makefile
Homework/ospf/r2/: Makefile
Homework/ospf/r3/: Makefile
Homework/protocol/: .gitignore  Makefile  README.md  README_en.md  grade.py  main.cpp  protocol.cpp  protocol.h  rip.h
Homework/protocol-ospf/: .gitignore  Makefile  README.md  README_en.md  grade.py  main.cpp  ospf_lsa_csum.cpp  protocol_ospf.cpp  protocol_ospf.h
Homework/protocol-ospf/data/: protocol_ospf_answer1.txt  protocol_ospf_answer2.txt  protocol_ospf_input1.pcap  protocol_ospf_input2.pcap
Homework/router/: .gitignore  Makefile  README.md  lookup.cpp  main.cpp  rip.h  router.h
Homework/tftp/: .gitignore  client.cpp  server.cpp  tftp.h
Joint/: README-JOINT.md  README.md
Joint/SetupJoint/: .gitignore  bird2.conf  bird3.conf  bird4.conf  conf-part7-r2.conf  conf-part8-r1.conf  config.fish  gen_part6.py  gen_part7.py  gen_part8.py  part1.sh  part3.sh  part6.sh  part8.sh
Setup/: bird.conf  bird1.conf  conf-part7.conf  conf-part8.conf  conf-part9.conf  dhcpcd-pc1.conf  dhcpcd-pc2.conf  dhcpcd-r1.conf  dhcpcd-r3.conf  gen_part8.py  part7.sh  part8.sh  part9.sh  restore.sh  route-pc2.sh  setup-netns.sh  setup-pc1.sh  setup-pc2.sh  setup-r1.sh  setup-r3.sh
Setup/netns/: bird-r1-v2.conf  bird-r1.conf  bird-r1.sh  bird-r3-v2.conf  bird-r3.conf  bird-r3.sh  setup-netns-noip.sh  setup-netns.sh
Setup/part7to9/: conf-part8.conf  part8.sh  part9-pc2.sh  part9.sh
Setup/part9to11/: .gitignore  bird1-v2.conf  bird1.conf  conf-part10.conf  conf-part11.conf  conf-part9.conf  gen.py  gen_part10.py  part10-pc2.sh  part10.sh  part11-pc2.sh  part11.sh  part9-pc2.sh  part9.sh
Setup/rpi/: setup-r1.sh
SetupJoint/: as4538_prefixes  bird1.conf  bird2.conf  bird3.conf  bird4.conf  conf-part6-r1.conf  conf-part7-r1.conf  conf-part7-r3.conf  conf-part7-r4.conf  disable.sh  part1.sh  part2.sh  part3.sh  part4.sh  part5.sh  part7.sh  setup.sh
(+146 files in other folders)
