if(${BACKEND} STREQUAL LINUX)
    file(GLOB_RECURSE SOURCES src/linux/*.cpp)
    file(GLOB_RECURSE HEADERS src/linux/*.h)
    set(LIBRARIES pcap)
elseif(${BACKEND} STREQUAL MACOS)
    file(GLOB_RECURSE SOURCES src/macOS/*.cpp)
    set(LIBRARIES pcap)
elseif(${BACKEND} STREQUAL STDIO)
    file(GLOB_RECURSE SOURCES src/stdio/*.cpp)
    set(LIBRARIES pcap)
elseif(${BACKEND} STREQUAL XILINX)
    file(GLOB_RECURSE SOURCES src/xilinx/*.c)
elseif(${BACKEND} STREQUAL EMCC)
    file(GLOB_RECURSE SOURCES src/emcc/*.cpp)
endif()

add_library(router_hal ${SOURCES} ${HEADERS})
target_include_directories(router_hal PUBLIC include)
target_link_libraries(router_hal ${LIBRARIES})